# telos-evm-docker

./: .gitignore  .gitmodules  Dockerfile  README.md  activate.sh  install.sh  package-lock.json  pyproject.toml  pytest.ini  requirements.docs.txt  requirements.tests.txt  requirements.txt  run-local.sh  run-mainnet.sh  run-testnet.sh  run.sh  run_docs_build.sh  setup.py  start_eosio_docker.sh  tevmc.run
.devcontainer/: devcontainer.json
.github/workflows/: config.yml  hardhat.yml  indexing.yml  openzeppelin.yml  pytest.yml  truffle.yml  truffle_erc20.yml  truffle_itxs.yml
scripts/: config.ini  deployEvm.js  deploy_contract.sh  genesis.json  init_blockchain.sh  keosd_config.ini  logging.json  replay_blockchain.sh  telos_evm.py
test_erc20/: package-lock.json  package.json  truffle-config.js
test_hardhat/: hardhat.config.js  package-lock.json  package.json
test_openzeppelin/: README.md
tests/: conftest.py  patch_test.py  test_dummy.py  test_erc20  test_evm_create.py  test_fork_double_mock.py  test_fork_mock.py  test_generate_test_data.py  test_hardhat  test_indexer_reconnect.py  test_indexer_restart_multi.py  test_integrity.py  test_itxs  test_mainnet_bootstrap.py  test_mainnet_latest.py  test_manual.py  test_nodeos.py  test_py_integrity_check.py  test_repair_dirty_db.py  test_rpc_batch.py  test_substitution.py  test_testnet_latest.py  test_testnet_restart.py  test_tx_time_override.py  test_web3.py  test_websocket_local_new_heads.py  test_websocket_local_rpc.py
tevmc/: __init__.py  cleos_evm.py  config.py  routes.py  tevmc.py  utils.py
tevmc/cmdline/: cli.py  (+16 more)
(+275 files in other folders)
